# Nifties-contract-fund

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
src/declarations/fund/: fund.did.d.ts  fund.did.js  index.js
src/declarations/fund_assets/: index.js
src/fund/: Cargo.toml  fund.did
src/fund/src/: lib.rs  utils.rs
src/fund_assets/src/: index.html  index.js
src/fund_assets/src/idls/: coinflip.did.js  nns-minting.did.js  nns_ledger.did.js  xtc.did.js
