[package]
name = "fund"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.4"
ic-cdk = "0.4"
ic-cdk-macros = "0.4"
ic-ledger-types = "0.1.0"
serde = "1.0.126"
serde_derive = "1.0.126"
once_cell = "1.9"
parking_lot = "0.12"

